--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/minecraft.server.1/craftbukkit-1.0.1-R1.jar"/>
+	<classpathentry kind="lib" path="craftbukkit-1.0.1-R1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
