team instead of teams

--- a/plugin.yml
+++ b/plugin.yml
@@ -4,6 +4,6 @@ version: 1.0
 author: phondeux, generalportion
 
 commands:
-  teams:
+  team:
     description: All of the Team commands
     usage: See documentation.
